--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="src/PatchService.js"></script>
     <script src="src/GamePatch.js"></script>
     <script src="src/PalletePatch.js"></script>
+    <script src="src/StagePalletePatch.js"></script>
     <script src="src/ClownPatch.js"></script>
     <script src="src/FeilinPatch.js"></script>
     <script src="src/LeePatch.js"></script>
@@ -65,7 +66,7 @@
             Source Code
           </a>
           <label>
-            Version 0.1, 2023
+            Version 0.2, 2023
           </label>
         </div>
       </div>
